2003-01-24  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java:  Define cut and cute.

	* kawa/lang/Lambda.java (rewrite):  Don't convert rest parameter
	to String if it is a Symbol.

	* kawa/lang/SyntaxRule.java (print_template_program):  Update
	commented-out debug helper routine.
	* kawa/lang/SyntaxRules.java (<init>):  Update call in debug code.

2003-01-03  Per Bothner  <per@bothner.com>

	* libtool.m4, ltmain.sh:  Copied from libtool (pre-1.5 CVS) version.
	* ltmain.sh:  Add definition of SED.
	* Make-rules (.o rule):  Remove --tag=GCJ - not needed by new libtool.
	* aclocal.m4:  Re-generated using aclocal 1.6.3.
	* configure:  Re-generate using autoconf 2.53.
	* **/Makefile.in:  Re-generate using automake 1.6.3.
	
	* config.guess, config.sub:  Update from ftp.gnu.org.

2003-01-02  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Use 3-operand form of
	define_field for unescaped-data.

2003-01-01  Per Bothner  <per@bothner.com>

	* kawa/standard/Scheme.java (initScheme):  Use 3-operand form of
	define_field if and only if field is in class written in Java.

2002-12-11  Per Bothner  <per@bothner.com>

	* kawa/standard/define_syntax.java (scanForDefinitions, rewriteForm):
	Handle Symbols as macro names - needed for Common Lisp.
	* kawa/standard/syntax_case.java (rewriteClauses):  Allow
	pattern names to be Objects - i.e. Symbols as well as Strings.
	(rewriteForm):  Lkewise allow literal identifiers to be Symbols.
	(class syntax_case_work):  Likewise - change field type to Object[].
	* kawa/lang/Syntax.java (name):  Change field from String to Object.
	(getName):  Change to handle either Symbol or String in name.
	(getSymbol, setname):  New methods.
	(<init>):  Change paramater type to Object, to allow Symbol.
	* kawa/lang/Macro.java (make):  Allow name to be Symbol or String.
	(<init>):  Likewise.
	* kawa/lang/SyntaxRules.java (translate_pattern):  Don't convert
	Symbol to String - instead use as is.  Needed for Common Lisp.